# feup-cal

./: README.md
Practical Classes/: Readme.md
Practical Classes/cal_fp01_CLion/Tests/: Factorial.cpp  Sum.cpp  tests.cpp
Practical Classes/cal_fp02_CLion/Tests/: Labirinth.cpp  Sudoku.cpp  Sudoku.h  tests.cpp
Practical Classes/cal_fp04_CLion/Tests/: Graph.h
Practical Classes/cal_fp05_CLion/Tests/: Graph.h  tests.cpp
Practical Classes/cal_fp06_CLion/: FichaJUNG.cpp
Project/: CMakeLists.txt  README.md
Project/src/: Graph.cpp  Graph.h  Menu.cpp  Menu.h  MutablePriorityQueue.h  POITypes.h  States.h  helperfunctions.cpp  helperfunctions.h  main.cpp
cal_fp01_CLion/Tests/: Change.cpp
cal_fp02_CLion/Tests/: Labirinth.h
